eks_wepapp/k8s_configs/ingress/default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 12345
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
     nginx.ingress.kubernetes.io/default-backend: test
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/default-backend: defaultbackend
     nginx.ingress.kubernetes.io/denylist-source-range: 35.86.126.222/32
     nginx.org/server-snippets: |
       location ~* "/" {
           allow 174.99.60.65;
           deny all;
           return 403;
       }   
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 443
