eks_wepapp/k8s_configs/ingress/example-ingress-rule.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: micro-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: hostname.mydomain.com
      http:
        paths:
        - backend:
            service:
              name: hostname-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: apache.mydomain.com
      http:
        paths:
        - backend:
            service:
              name: apache-svc
              port:
                number: 80
          path: /
          pathType: Prefix
